--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
-    "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
-    "debug": "~2.0.0",
-    "hbs": "~2.7.0",
-    "grunt": "~0.4.5",
-    "grunt-contrib-coffeeify": "~0.1.0",
-    "grunt-coffeeify": "~0.1.3",
-    "grunt-contrib-watch": "~0.6.1",
-    "passport": "~0.2.1",
-    "websocket": "~1.0.10",
-    "passport-local": "~1.0.0",
-    "express-session": "~1.9.1",
-    "line-by-line": "~0.1.3",
-    "sha1": "~1.1.0",
-    "ws": "~0.4.32",
-    "underscore": "~1.7.0",
     "connect-redis": "~2.1.0",
-    "jquery": "~2.1.1"
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.0.0",
+    "express": "~4.9.0",
+    "express-session": "~1.9.1",
+    "grunt": "~0.4.5",
+    "grunt-coffeeify": "~0.1.3",
+    "grunt-contrib-coffeeify": "~0.1.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "hbs": "~2.7.0",
+    "jquery": "~2.1.1",
+    "line-by-line": "~0.1.3",
+    "morgan": "~1.3.0",
+    "passport": "~0.2.1",
+    "passport-local": "~1.0.0",
+    "redis": "^0.12.1",
+    "serve-favicon": "~2.1.3",
+    "sha1": "~1.1.0",
+    "underscore": "~1.7.0",
+    "websocket": "~1.0.10",
+    "ws": "~0.4.32"
   }
 }
